crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__breadcrumb_row_appears_only_when_drilled.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
assess-services  ● mint-tundra  ◐ running · 4m 12s
step 28/40  █████████████████░░░░░░░  ◐ hunt
⇡6100000 ⇣420000 $18.40 · ⚑2
mint-tundra › hunt
  ✓ stage-00 … stage-29  (+28 done · 2 skipped)
▸ ◐ hunt · for_each · 86 units
    ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
  ▸ ┣━ ✓ svc-0 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ otter#2 · svc-1 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ otter#3 · svc-2 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ svc-3 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ otter#5 · svc-4 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ otter#6 · svc-5 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ svc-6 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✗ otter#8 · svc-7 · anthropic/claude-opus-5-5 ···· ✗ failed
    ┣━ ✓ otter#9 · svc-8 · anthropic/claude-opus-5-5 ···· ✓ done
    ┣━ ✓ svc-9 · anthropic/claude-opus-5-5 ···· ✓ done
    ⋮ +76 below
  ○ verify … cleanup  (+9 pending)
feed 08 otter#57 read_file src/lib.rs
feed 09 otter#57 read_file src/lib.rs
feed 10 otter#57 read_file src/lib.rs
feed 11 otter#57 read_file src/lib.rs
↑↓ move · enter drill · ← back · / filter · Esc pause · q quit
