crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__dashboard_snapshot.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
assertion_line: 298
expression: render_plain(&rows)
---
assess-services  ● mint-tundra  ◐ running · 4m 12s
step 2/3  ████████████████░░░░░░░░  ◐ scan
⇡6.1M ⇣420k $18.40 · ⚑5
