crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__fanout_collapsed_shows_density_movers_and_more_at_86_units.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
  ◐ hunt · for_each · 86 units
    ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
    ┣━ ◐ otter#57 · svc-56 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ svc-57 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ otter#59 · svc-58 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ otter#60 · svc-59 · anthropic/claude-opus-5-5 ···· ◐ running
    ┗━ … +82 more · [enter] expand
