crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__fanout_expanded_failed_filter_lists_only_failed_units.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
▸ ◐ hunt · for_each · 86 units · failed
    ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
  ▸ ┣━ ✗ otter#8 · svc-7 · anthropic/claude-opus-5-5 ···· ✗ failed
    ┗━ ✗ otter#32 · svc-31 · anthropic/claude-opus-5-5 ···· ✗ failed
