crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__live_layout_60_rows_shows_every_step_and_more_feed.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
assess-services  ● mint-tundra  ◐ running · 4m 12s
step 28/40  █████████████████░░░░░░░  ◐ hunt
⇡6100000 ⇣420000 $18.40 · ⚑2
  ✓ stage-00 · run ···· ✓ 18s
  ✓ stage-01 · run ···· ✓ 18s
  ✓ stage-02 · run ···· ✓ 18s
  ✓ stage-03 · run ···· ✓ 18s
  ✓ stage-04 · run ···· ✓ 18s
  ⊘ stage-05 · run ···· ⊘ skipped
  ⊘ stage-06 · run ···· ⊘ skipped
  ✓ stage-07 · run ···· ✓ 18s
  ✓ stage-08 · run ···· ✓ 18s
  ✓ stage-09 · run ···· ✓ 18s
  ✓ stage-10 · run ···· ✓ 18s
  ✓ stage-11 · run ···· ✓ 18s
  ✓ stage-12 · run ···· ✓ 18s
  ✓ stage-13 · run ···· ✓ 18s
  ✓ stage-14 · run ···· ✓ 18s
  ✓ stage-15 · run ···· ✓ 18s
  ✓ stage-16 · run ···· ✓ 18s
  ✓ stage-17 · run ···· ✓ 18s
  ✓ stage-18 · run ···· ✓ 18s
  ✓ stage-19 · run ···· ✓ 18s
  ✓ stage-20 · run ···· ✓ 18s
  ✓ stage-21 · run ···· ✓ 18s
  ✓ stage-22 · run ···· ✓ 18s
  ✓ stage-23 · run ···· ✓ 18s
  ✓ stage-24 · run ···· ✓ 18s
  ✓ stage-25 · run ···· ✓ 18s
  ✓ stage-26 · run ···· ✓ 18s
  ✓ stage-27 · run ···· ✓ 18s
  ✓ stage-28 · run ···· ✓ 18s
  ✓ stage-29 · run ···· ✓ 18s
  ◐ hunt · for_each · 86 units
    ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
    ┣━ ◐ otter#57 · svc-56 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ svc-57 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ otter#59 · svc-58 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ otter#60 · svc-59 · anthropic/claude-opus-5-5 ···· ◐ running
    ┗━ … +82 more · [enter] expand
  ○ verify ···· ○ pending
  ○ triage ···· ○ pending
  ○ report ···· ○ pending
  ○ notify ···· ○ pending
  ○ ticket ···· ○ pending
  ○ archive ···· ○ pending
  ○ digest ···· ○ pending
  ○ publish ···· ○ pending
  ○ cleanup ···· ○ pending
feed 02 otter#57 read_file src/lib.rs
feed 03 otter#57 read_file src/lib.rs
feed 04 otter#57 read_file src/lib.rs
feed 05 otter#57 read_file src/lib.rs
feed 06 otter#57 read_file src/lib.rs
feed 07 otter#57 read_file src/lib.rs
feed 08 otter#57 read_file src/lib.rs
feed 09 otter#57 read_file src/lib.rs
feed 10 otter#57 read_file src/lib.rs
feed 11 otter#57 read_file src/lib.rs
↑↓ move · enter drill · ← back · / filter · q quit
