crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__whole_frame_86_unit_fan_out_at_24_rows_keeps_density_and_feed.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
assess-services  ● mint-tundra  ◐ running · 4m 12s
step 28/40  █████████████████░░░░░░░  ◐ hunt
⇡6100000 ⇣420000 $18.40 · ⚑2
  ✓ stage-00 … stage-29  (+28 done · 2 skipped)
  ◐ hunt · for_each · 86 units
    ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
    ┣━ ◐ otter#57 · svc-56 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ svc-57 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ otter#59 · svc-58 · anthropic/claude-opus-5-5 ···· ◐ running
    ┣━ ◐ otter#60 · svc-59 · anthropic/claude-opus-5-5 ···· ◐ running
    ┗━ … +82 more · [enter] expand
  ○ verify ···· ○ pending
  ○ triage ···· ○ pending
  ○ report ···· ○ pending
  ○ notify ···· ○ pending
  ○ ticket ···· ○ pending
  ○ archive ···· ○ pending
  ○ digest ···· ○ pending
  ○ publish · cleanup  (+2 pending)
otter#59 ▸ bash cargo test -p billing
otter#56 ▸ write_file findings/svc-56.md
otter#57 ▸ bash git diff --stat
otter#58 ▸ read_file services/auth/src/token.rs
↑↓ move · enter drill · ← back · / filter · Esc pause · q quit
