crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__whole_frame_completed_run_shows_a_full_bar_and_no_active_step.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
release-train  ● mint-tundra  ✓ completed · 11m 35s
step 4/4  ████████████████████████
⇡2400000 ⇣150000 $7.85 · ⚑3
  ✓ build · builder · anthropic/claude-opus-5-5 ···· ✓ 1m 01s
  ✓ review · builder · anthropic/claude-opus-5-5 ···· ✓ 1m 01s
  ✓ deploy · builder · anthropic/claude-opus-5-5 ···· ✓ 1m 01s
  ✓ smoke · builder · anthropic/claude-opus-5-5 ···· ✓ 1m 01s
heron#1 ▸ bash make smoke
heron#1 ▸ write_file reports/release-4.2.0.md
↑↓ move · enter drill · ← back · / filter · Esc pause · q quit
