crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__layout__tests__whole_frame_gate_parked_shows_the_gate_and_its_keys.snap
---
source: crates/rupu-cli/src/output/live_view/layout.rs
expression: s
---
release-train  ● mint-tundra  ⏸ awaiting_approval · 7m 41s
step 2/5  ██████████░░░░░░░░░░░░░░  ⏸ approve-deploy
⇡1240000 ⇣86000 $4.12 · ⚑1
  ✓ build · heron#1 · builder · anthropic/claude-opus-5-5 ···· ✓ 1m 36s
  ✓ review · lynx#2 · reviewer · anthropic/claude-opus-5-5 ···· ✓ 2m 22s
▸ ⏸ approve-deploy · gate ···· ⏸ awaiting approval
  ○ deploy ···· ○ pending
  ○ smoke ···· ○ pending
lynx#2 ▸ read_file src/release.rs
lynx#2 ▸ grep unwrap
heron#1 ▸ bash cargo build
a approve · r reject · v findings · q quit
